--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Welcome to the John Paul's Webpage</h1>
-        <div class="container">
-			<div class="img-container">
-				<div class="card">
-					<iframe src="https://i.simmer.io/@jprpanebianco/~81302ed3-8669-b958-1738-eade822bd6ee" style="width:960px;height:600px"></iframe>
-					<div class="text-container">
-					<h2>Zazu</h2>
-					<p style="color:black;" >Here's a prototype for a game idea I had. I thought breakout games would be a lot more fun if there was more to do
-                        with the ball. So, I decided to try seeing if it would be fun if th eball could jump. From there, it was worth trying to make the ball
-                        do a ground pound.<br>Use the mouse to move the paddle.<br>Use the left mouse button to fire the ball, make it jump, and, while it's
-                        airborne, do a ground pound.<br>Collect the purple gems while the ball does all the work.</p>
-					</div>
-				</div>
+<html lang="en
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>John Paul's Webpage</title>
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/ppp.css">
+</head>
+<body>
+  <h1>Welcome to the John Paul's Webpage</h1>
+  <div class="container">
+	<div class="img-container">
+	  <div class="card">
+	    <iframe src="https://i.simmer.io/@jprpanebianco/~81302ed3-8669-b958-1738-eade822bd6ee" style="width:960px;height:600px"></iframe>
+	      <div class="text-container">
+		      <h2>Breakout Prototype</h2>
+	        <p style="color:black;" >Here's a prototype for a game idea I had. I thought breakout games would be a lot more fun if there was more to do
+          with the ball. So, I decided to try seeing if it would be fun if th eball could jump. From there, it was worth trying to make the ball
+          do a ground pound.<br>Use the mouse to move the paddle.<br>Use the left mouse button to fire the ball, make it jump, and, while it's
+          airborne, do a ground pound.<br>Collect the purple gems while the ball does all the work.</p>
+	      </div>
 			</div>
 		</div>
-    </body>
+	</div>
+</body>
 </html>
