--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <link rel="stylesheet" type="text/css" href="css/ppp.css">
 </head>
 <body>
-  <h1>Welcome to the John Paul's Webpage</h1>
-  <div class="container">
+<div class="container">
+	  <div class="top-text">
+			<h1>Welcome to the John Paul's Webpage</h1>
+			<p style="color:black;" >
+			A collection of some of my game prototypes.
+			</p>
+		</div>
+	<div class="container">
 	<div class="img-container">
 	  <div class="card">
 	    <iframe src="https://i.simmer.io/@jprpanebianco/~81302ed3-8669-b958-1738-eade822bd6ee" style="width:960px;height:600px"></iframe>
@@ -22,5 +28,6 @@
 			</div>
 		</div>
 	</div>
+</div>
 </body>
 </html>
