--- a/index.html
+++ b/index.html
@@ -1,30 +1,122 @@
 <!DOCTYPE html>
-<html lang="en
+<html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>John Paul's Webpage</title>
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/ppp.css">
+	<title>John Paul Panebianco</title>
+	<meta name="description" content="Resume Website">
+	<meta name="keywords" content="John Paul Panebianco">
+	<meta name="author" content="John Paul Panebianco">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/project.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-	  <div class="top-text">
-			<h1>Welcome to the John Paul's Webpage</h1>
-			<p style="color:black;" >
-			A collection of some of my game prototypes.
-			</p>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+	<a class="navbar-brand" href="index.html" style="color: #fff; font-family: 'Montserrat', sans-serif;">JOHN PAUL <strong>PANEBIANCO</strong></a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item active">
+				<a class="nav-link text-white" href="#prototypes">Prototypes</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link text-white" href="#projects">Projects</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link text-white" href="#resume">Resume</a>
+			</li>
+		</ul>
+	</div>
+</nav>
+<div id="prototypes" class= "index-container head col-lg-12" style=" display: flex; align-items: center; flex-wrap: wrap;">
+	<div  class="col-lg-12 mb-5">
+		<h3>PROTOTYPES</h3>
+		<div class="col">
+			<div class="container">
+				<div class="row justify-content-md-center">
+					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
+						<div class="card mb-5">
+							<img class="cardimg" src="img/defender.jpg">
+							<div class="card-body">
+								<div class="text-container">
+									<p><strong>Zombie Defender</strong>&nbsp;&nbsp; A mouse-to-aim shooter. Without zombies.
+									<a href="defender.html" class="stretched-link" style="color:#BC4749"><strong>Play it.</strong></a>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
+						<div class="card mb-5">
+							<img class="cardimg" src="img/breakout.jpg">
+							<div class="card-body">
+								<div class="text-container">
+									<p><strong>Breakout with Jumping</strong>&nbsp;&nbsp; A breakout clone. With a jumping gimmick.
+									<a href="breakout.html" class="stretched-link" style="color:#BC4749"><strong>Play it.</strong></a>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-	<div class="container">
-	<div class="img-container">
-	  <div class="card">
-	    <iframe src="https://i.simmer.io/@jprpanebianco/~81302ed3-8669-b958-1738-eade822bd6ee" style="width:960px;height:600px"></iframe>
-	      <div class="text-container">
-		      <h2>Breakout Prototype</h2>
-	        <p style="color:black;" >Here's a prototype for a game idea I had. I thought breakout games would be a lot more fun if there was more to do
-          with the ball. So, I decided to try seeing if it would be fun if th eball could jump. From there, it was worth trying to make the ball
-          do a ground pound.<br>Use the mouse to move the paddle.<br>Use the left mouse button to fire the ball, make it jump, and, while it's
-          airborne, do a ground pound.<br>Collect the purple gems while the ball does all the work.</p>
-	      </div>
+	</div>
+</div>
+<div id="projects" class= "index-container head col-lg-12 mb-6" style=" display: flex; align-items: center; flex-wrap: wrap;">
+	<div class="col-lg-12 mb-5">
+		<h3>PROJECTS</h3>
+		<div class="col">
+			<div class="container">
+				<div class="row justify-content-md-center">
+					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
+						<div class="card mb-5">
+							<img class="cardimg" src="img/knight.jpg">
+							<div class="card-body">
+								<div class="text-container">
+									<p><strong>Knight's Tour</strong>&nbsp;&nbsp; Implementations and comparisons of backtracking and Warnsdorff algorithms for the classic graph problem.
+									<a href="https://github.com/jprpanebianco/knights-tour" class="stretched-link" style="color:#00183D"><strong>Get the code.</strong></a>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
+						<div class="card mb-5">
+							<img class="cardimg" src="img/secure.jpg">
+							<div class="card-body">
+								<div class="text-container">
+									<p><strong>File Security Environment</strong>&nbsp;&nbsp; Password handling and key-stretching, AES encryption and some simple user and file handling.
+									<a href="https://github.com/jprpanebianco/simple-secure" class="stretched-link" style="color:#00183D"><strong>Get the code.</strong></a>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div id="resume" class= "index-container head col-lg-12 mb-6" style=" display: flex; align-items: center; flex-wrap: wrap;">
+	<div class="col-lg-12 mb-5">
+		<h3>RESUME</h3>
+		<div class="col">
+			<div class="container">
+				<div class="row justify-content-md-center">
+					<div class="img-container col-sm-12 col-lg-10 d-flex">
+						<object data="img/resume-red.pdf" type="application/pdf" width="100%" height="600px"> 
+						<p>It appears you do not have a PDF plugin for this browser. Not a problem. 
+						<a style="color: #00183D;" href="img/resume.pdf">Click here to download the PDF file.</a>
+						</p>  
+						</object>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
