--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div class="row justify-content-md-center">
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="img/defender.jpg">
+							<img class="cardimg" src="/img/defender.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>Zombie Defender</strong>&nbsp;&nbsp; A mouse-to-aim shooter. Without zombies.
@@ -52,7 +52,7 @@
 					</div>
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="img/breakout.jpg">
+							<img class="cardimg" src="/img/breakout.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>Breakout with Jumping</strong>&nbsp;&nbsp; A breakout clone. With a jumping gimmick.
@@ -75,7 +75,7 @@
 				<div class="row justify-content-md-center">
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="img/knight.jpg">
+							<img class="cardimg" src="/img/knight.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>Knight's Tour</strong>&nbsp;&nbsp; Implementations and comparisons of backtracking and Warnsdorff algorithms for the classic graph problem.
@@ -87,7 +87,7 @@
 					</div>
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="img/secure.jpg">
+							<img class="cardimg" src="/img/secure.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>File Security Environment</strong>&nbsp;&nbsp; Password handling and key-stretching, AES encryption and some simple user and file handling.
