Fix resize index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 	<link rel="stylesheet" type="text/css" href="css/project.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-	<a class="navbar-brand" href="index.html" style="color: #fff; font-family: 'Montserrat', sans-serif;">JOHN PAUL <strong>PANEBIANCO</strong></a>
+	<a class="navbar-brand resize-phone" href="#" style="color: #fff; font-family: 'Montserrat', sans-serif;">JOHN PAUL <strong>PANEBIANCO</strong></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
 	</button>
@@ -32,15 +34,15 @@
 		</ul>
 	</div>
 </nav>
-<div id="prototypes" class= "index-container head col-lg-12" style=" display: flex; align-items: center; flex-wrap: wrap;">
-	<div  class="col-lg-12 mb-5">
+<div id="prototypes" class= "index-container head col-lg-12 nopadding-phone" style=" display: flex; align-items: center; flex-wrap: wrap;">
+	<div  class="col-lg-12 mb-5 nopadding-phone">
 		<h3>PROTOTYPES</h3>
 		<div class="col">
 			<div class="container">
 				<div class="row justify-content-md-center">
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="/img/defender.jpg">
+							<img class="cardimg" src="img/defender.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>Zombie Defender</strong>&nbsp;&nbsp; A mouse-to-aim shooter. Without zombies.
@@ -52,7 +54,7 @@
 					</div>
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="/img/breakout.jpg">
+							<img class="cardimg" src="img/breakout.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>Breakout with Jumping</strong>&nbsp;&nbsp; A breakout clone. With a jumping gimmick.
@@ -67,15 +69,15 @@
 		</div>
 	</div>
 </div>
-<div id="projects" class= "index-container head col-lg-12 mb-6" style=" display: flex; align-items: center; flex-wrap: wrap;">
-	<div class="col-lg-12 mb-5">
+<div id="projects" class= "index-container head col-lg-12 mb-6 nopadding-phone" style=" display: flex; align-items: center; flex-wrap: wrap;">
+	<div class="col-lg-12 mb-5 nopadding-phone">
 		<h3>PROJECTS</h3>
 		<div class="col">
 			<div class="container">
 				<div class="row justify-content-md-center">
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="/img/knight.jpg">
+							<img class="cardimg" src="img/knight.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>Knight's Tour</strong>&nbsp;&nbsp; Implementations and comparisons of backtracking and Warnsdorff algorithms for the classic graph problem.
@@ -87,7 +89,7 @@
 					</div>
 					<div class="img-container col-sm-12 col-md-8 col-lg-5 d-flex">
 						<div class="card mb-5">
-							<img class="cardimg" src="/img/secure.jpg">
+							<img class="cardimg" src="img/secure.jpg">
 							<div class="card-body">
 								<div class="text-container">
 									<p><strong>File Security Environment</strong>&nbsp;&nbsp; Password handling and key-stretching, AES encryption and some simple user and file handling.
@@ -103,8 +105,8 @@
 		</div>
 	</div>
 </div>
-<div id="resume" class= "index-container head col-lg-12 mb-6" style=" display: flex; align-items: center; flex-wrap: wrap;">
-	<div class="col-lg-12 mb-5">
+<div id="resume" class= "index-container head col-lg-12 mb-6 nopadding-phone" style=" display: flex; align-items: center; flex-wrap: wrap;">
+	<div class="col-lg-12 mb-5 nopadding-phone">
 		<h3>RESUME</h3>
 		<div class="col">
 			<div class="container">
